
Version 2.2.1
 * Robert Sowada
   - Changed version to 2.2.1
   - Bugfix: Version check of gtk in configure.ac (thanks to Andy Schofield for
        reporting this bug)
   - Added Andy Schofield to contributors
   - Bugfix: False GPL version in "doc/gnubiff.texi"
   - Added GPL (version 2) as ASCII text file to the gnubiff directory
	
Version 2.2.0           2006-04-09 17:44
 * Robert Sowada
   - Changed version to 2.2.0 (from version 2.1.5)
   - Removed not needed include files from "src/gnubiff.cc"
   - Added files from libegg for later systray support
   - Updated TODO
   - Cleanup of applet code
   - Bugfix: gnome version of gnubiff can now be installed to any directory
   - Added Jakub Raczkowski to contributors
   - Workaround: Added a parameter to the create function to work around the
        problem of setting an incorrect callback data pointer for the gtk
        applet
   - Bugfix: Text in gtk applet now always fits into the fixed container
   - Bugfix: Gnome applet now identical to gtk applet.
   - Feature: It's now possible to print the number of new messages without
        zero padding (via "%D")
   - Added Maik Wachsmuth and Satou Kazuhito to contributors
   - Bugfix: Checking for NULL-pointer (in Biff::replace())
   - Bugfix: Threadsafeness of some mailbox access functions
   - Bugfix: Message when loading config file from newer gnubiff version
   - Updated Italian translation (thanks to Stefano Fabri; for version 2.1.x)
   - Bugfix: Removed no longer needed files from po/POTFILES.in
   - Feature: Gnubiff can now be started without GUI (option '--nogui')
   - Feature: Gnubiff can now be started without X (this was feature request
        #1059347 by Iulian Tocu)
   - Feature: Hungarian translation (thanks to Wallner Adam; for version 2.1.x)
   - Added Wallner Adam to translators and contributors
   - Bugfix: Added an include to src/support.cc (for FreeBSD 4)
   - Feature: Control gnubiff via USR1 and USR2 signal (feature request