@@ -1,4 +1,4 @@
-@set UPDATED 9 April 2006
+@set UPDATED 17 April 2006
 @set UPDATED-MONTH April 2006
 @set EDITION 2.2.1
 @set VERSION 2.2.1
